[package]
name = "lunar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
mongodb = "2.7.0"
dotenvy = "0.15.7"
chrono = { version = "0.4.31", features=["serde"] }
serde = { version = "1.0.188", features=["derive"] }
serde_json = "1.0.107"
env_logger = "0.10.0"
log = "0.4.20"

